python/tests/gold/authenticationhttppartialbuffertest/snapshots/econf.json
{
    "layered_runtime": {
        "layers": [
            {
                "name": "static_layer",
                "static_layer": {
                    "envoy.deprecated_features:envoy.api.v2.route.HeaderMatcher.regex_match": true,
                    "envoy.deprecated_features:envoy.api.v2.route.RouteMatch.regex": true,
                    "envoy.deprecated_features:envoy.config.filter.http.ext_authz.v2.ExtAuthz.use_alpha": true,
                    "envoy.deprecated_features:envoy.config.trace.v2.ZipkinConfig.HTTP_JSON_V1": true
                }
            }
        ]
    },
    "static_resources": {
        "clusters": [
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_127_0_0_1_8877_default",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "127.0.0.1",
                                                "port_value": 8877,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_127_0_0_1_8877_default",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_authenticationhttppartialbuffertest_http_default",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "authenticationhttppartialbuffertest-http.default",
                                                "port_value": 80,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_authenticationhttppartialbuffertest_http_default",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_extauth_authenticationhttppartia-0",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "authenticationhttppartialbuffertest-http-auth.default",
                                                "port_value": 443,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_extauth_authenticationhttppartia-0",
                "transport_socket": {
                    "name": "envoy.transport_sockets.tls",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
                        "common_tls_context": {
                            "tls_certificates": [
                                {
                                    "certificate_chain": {
                                        "filename": "/tmp/ambassador/snapshots/default/secrets-decoded/auth-partial-secret/6B4919697C5D70BB8E4A73A59DDF51A53AE24264.crt"
                                    },
                                    "private_key": {
                                        "filename": "/tmp/ambassador/snapshots/default/secrets-decoded/auth-partial-secret/6B4919697C5D70BB8E4A73A59DDF51A53AE24264.key"
                                    }
                                }
                            ]
                        }
                    }
                },
                "type": "STRICT_DNS"
            }
        ],
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 8080,
                        "protocol": "TCP"
                    }
                },
                "filter_chains": [
                    {
                        "filter_chain_match": {},
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager",
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
                                    "access_log": [
                                        {
                                            "name": "envoy.file_access_log",
                                            "typed_config": {
                                                "@type": "type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog",
                                                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                                                "path": "/dev/fd/1"
                                            }
                                        }
                                    ],
                                    "http_filters": [
                                        {
                                            "config": {
                                                "clear_route_cache": true,
                                                "http_service": {
                                                    "authorization_request": {
                                                        "allowed_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "authorization"
                                                                },
                                                                {
                                                                    "exact": "cookie"
                                                                },
                                                                {
                                                                    "exact": "from"
                                                                },
                                                                {
                                                                    "exact": "proxy-authorization"
                                                                },
                                                                {
                                                                    "exact": "requested-header"
                                                                },
                                                                {
                                                                    "exact": "requested-status"
                                                                },
                                                                {
                                                                    "exact": "user-agent"
                                                                },
                                                                {
                                                                    "exact": "x-forwarded-for"
                                                                },
                                                                {
                                                                    "exact": "x-forwarded-host"
                                                                },
                                                                {
                                                                    "exact": "x-forwarded-proto"
                                                                }
                                                            ]
                                                        },
                                                        "headers_to_add": []
                                                    },
                                                    "authorization_response": {
                                                        "allowed_client_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "auth-request-body"
                                                                },
                                                                {
                                                                    "exact": "authorization"
                                                                },
                                                                {
                                                                    "exact": "location"
                                                                },
                                                                {
                                                                    "exact": "proxy-authenticate"
                                                                },
                                                                {
                                                                    "exact": "set-cookie"
                                                                },
                                                                {
                                                                    "exact": "www-authenticate"
                                                                }
                                                            ]
                                                        },
                                                        "allowed_upstream_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "auth-request-body"
                                                                },
                                                                {
                                                                    "exact": "authorization"
                                                                },
                                                                {
                                                                    "exact": "location"
                                                                },
                                                                {
                                                                    "exact": "proxy-authenticate"
                                                                },
                                                                {
                                                                    "exact": "set-cookie"
                                                                },
                                                                {
                                                                    "exact": "www-authenticate"
                                                                }
                                                            ]
                                                        }
                                                    },
                                                    "path_prefix": "/extauth",
                                                    "server_uri": {
                                                        "cluster": "cluster_extauth_authenticationhttppartia-0",
                                                        "timeout": "5.000s",
                                                        "uri": "https://extauth"
                                                    }
                                                },
                                                "with_request_body": {
                                                    "allow_partial_message": true,
                                                    "max_request_bytes": 7
                                                }
                                            },
                                            "name": "envoy.ext_authz"
                                        },
                                        {
                                            "name": "envoy.cors"
                                        },
                                        {
                                            "name": "envoy.router"
                                        }
                                    ],
                                    "http_protocol_options": {
                                        "accept_http_10": false
                                    },
                                    "normalize_path": true,
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "domains": [
                                                    "*"
                                                ],
                                                "name": "ambassador-listener-8080-*",
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "https",
                                                                    "name": "x-forwarded-proto"
                                                                }
                                                            ],
                                                            "prefix": "/ambassador/v0/check_ready",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/check_ready",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_ready",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/check_ready",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "https",
                                                                    "name": "x-forwarded-proto"
                                                                }
                                                            ],
                                                            "prefix": "/ambassador/v0/check_alive",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/check_alive",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_alive",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/check_alive",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "https",
                                                                    "name": "x-forwarded-proto"
                                                                }
                                                            ],
                                                            "prefix": "/ambassador/v0/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877_default",
                                                            "prefix_rewrite": "/ambassador/v0/",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "https",
                                                                    "name": "x-forwarded-proto"
                                                                }
                                                            ],
                                                            "prefix": "/target/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_authenticationhttppartialbuffertest_http_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_authenticationhttppartialbuffertest_http_default",
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/target/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_authenticationhttppartialbuffertest_http_default"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_authenticationhttppartialbuffertest_http_default",
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "server_name": "envoy",
                                    "stat_prefix": "ingress_http",
                                    "use_remote_address": true,
                                    "xff_num_trusted_hops": 0
                                }
                            }
                        ],
                        "use_proxy_proto": false
                    }
                ],
                "listener_filters": [],
                "name": "ambassador-listener-8080",
                "traffic_direction": "UNSPECIFIED"
            }
        ]
    }
}
